<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="24dp"
    tools:context=".ui.auth.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_fixloop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/inter_semibold"
            android:text="@string/slogan"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/login_subtitle"
            android:layout_marginBottom="26dp"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/register_hint_email"
            android:textSize="12sp"
            android:inputType="textEmailAddress"
            android:background="@drawable/fons_input"
            android:padding="12dp"
            android:layout_marginBottom="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            app:endIconMode="password_toggle"
            app:boxBackgroundMode="none"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingTop="12dp"
                android:background="@drawable/fons_input"
                android:hint="@string/login_hint_pass"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="45dp"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/register_btn_login"
            android:textSize="12sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#E0E0E0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="O"
                android:textColor="#999999"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="12sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#E0E0E0" />

        </LinearLayout>

        <Button
            android:id="@+id/btnGoToRegister"
            style="@style/BotoSecundari"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/login_btn_register"

            android:textSize="12sp"/>

    </LinearLayout>

</LinearLayout>